<resources>
    <string name="app_name">PrimerProyecto</string>

    <!-- En el name agegamos el identificador y en nuestra layout lo llamamos por el nombre -->
    <string name="relative_title">Texto dentro de RelativeLayout</string>
    <string name="relative_hint_name">Escribe tu Nombre</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Valores para la Activity de Animal -->
    <string name="fragment_lista_title">Lista de animales</string>
    <string name="relative_layout_iv_description">Imagen de un animal</string>

    <!-- Valores para fragment_animal_detalle -->
    <string name="detalle_image_view">Foto Animal</string>
    <string name="detalle_checkbox">¿Tiene alguna enfermedad?</string>
    <string name="detalle_radio_hembra">Hembra</string>
    <string name="detalle_radio_macho">Macho</string>
    <string name="detalle_btn">Regresar</string>

    <!-- Frgamnet de menu -->
    <string name="titulo_fragment_1">Opcion 1</string>
    <string name="titulo_fragment_2">Opcion 2</string>
    <string name="titulo_fragment_3">Opcion 3</string>

    <!-- Activity pricipal de animal -->
    <string name="btn_add_animal">Agregar</string>
    <string name="mensaje_db">La base de datos esta actualmente vacía.</string>

    <!-- Activity para crear Animales en la DB -->
    <string name="form_url_imagen_animal">Introduce una url de una imagen</string>
    <string name="form_nombre_animal">Introduce un nombre</string>
    <string name="form_sexo_animal">Sexo</string>
    <string name="form_isenfermo_animal">¿Esta enfermo?</string>
    <string name="form_descripcion_animal">Introduce una descripción del animal</string>
    <string-array name="form_sexo_array">
        <item>Hembra</item>
        <item>Macho</item>
    </string-array>
</resources>